# OATPP-Task

./: CMakeLists.txt  README.md  install-oatpp.sh
sql/: 001_init.sql
src/: AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  SwaggerComponent.hpp  main.cpp
src/controller/: NoteController.hpp
src/db/: NoteDb.hpp
src/dto/: NoteDto.hpp  ResponseDto.hpp  StatusDto.hpp
src/service/: NoteService.cpp  NoteService.hpp
test/: NoteControllerTest.cpp  NoteControllerTest.hpp  tests.cpp
test/app/: TestClient.hpp  TestComponent.hpp  TestDatabaseComponent.hpp
